# CSU-Network-AutoLogin

./: .editorconfig  .gitignore  LICENSE  README.md  build.ps1  clean.ps1  config.example.ini  environment.yml  pyproject.toml  release.ps1  requirements.txt  run.ps1
.github/workflows/: build-release.yml
csu_auto_connect/: __main__.py  autostart.py  config.py  logging_setup.py  main.py  paths.py  portal.py  ui.py  workers.py
