[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csu-auto-connect"
version = "0.1.0"
description = "CSU captive portal auto-connect tray app (PySide6)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "PySide6",
  "requests",
]

[tool.setuptools]
packages = ["csu_auto_connect"]
